fixes including normalize css, adds latest text post from tumblr, updates some font spacing

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,8 @@
 $font-color: #333;
+$font-color-light: #b8b8b8;
 $font-family: 'futura-pt', Helvetica, sans-serif;
 $font-size: 14px;
+$font-futura-spacing: 13px;
 
 $page-max-width: 900px;
 $page-gutter: 100px;
